refactor(client): put Client into class
also some minor improvements

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 			<input id="r" type="range" min="0" max="255">
 			<input id="g" type="range" min="0" max="255">
 			<input id="b" type="range" min="0" max="255">
-			<div id="field"></div>
+			<div id="matrix"></div>
 		</main>
 		<footer>
 			<a href="http://github.com/EdJoPaTo/websocket-ledmatrix-remote/">Source Code on GitHub</a>
