feat: use HTML5 color picker

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
 			<h1>LED-Matrix Remote</h1>
 		</header>
 		<main>
-			<input id="r" type="range" min="0" max="255">
-			<input id="g" type="range" min="0" max="255">
-			<input id="b" type="range" min="0" max="255">
+			<label>Color:
+				<input id="color" type="color">
+			</label>
 			<div id="matrix"></div>
 		</main>
 		<footer>
