--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
 			<div id="matrix"></div>
 		</main>
 		<footer>
-			<a href="http://github.com/EdJoPaTo/websocket-ledmatrix-remote/">Source Code on GitHub</a>
+			<a href="http://github.com/EdJoPaTo/websocket-ledmatrix-remote/">
+				Source Code on GitHub
+			</a>
 		</footer>
 	</body>
 </html>
