feat(html): add small text to indicate interactivity

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 			<h1>LED-Matrix Remote</h1>
 		</header>
 		<main>
+			Paint ahead in this
 			<label>Color:
 				<input id="color" type="color">
 			</label>
